--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -31,6 +31,7 @@
 	margin: auto;
 	position: relative;
 	top: 128px;
+	z-index: 10;
 	h2 {
 		color: #fff;
 		font-size: rem(52);
